Ventana Editar Local
Se hizo esta ventana y se toco el disño de algunas otras

--- a/Obligatorio2IngSoftware/nbproject/project.properties
+++ b/Obligatorio2IngSoftware/nbproject/project.properties
@@ -27,9 +27,11 @@ dist.dir=dist
 dist.jar=${dist.dir}/Obligatorio2IngSoftware.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.RSCalendar.jar=/Users/tomasmartinez/Desktop/RSCalendar.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.RSCalendar.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
