--- a/Obligatorio2IngSoftware/nbproject/project.properties
+++ b/Obligatorio2IngSoftware/nbproject/project.properties
@@ -28,10 +28,12 @@ dist.jar=${dist.dir}/Obligatorio2IngSoftware.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.RSCalendar.jar=/Users/tomasmartinez/Desktop/RSCalendar.jar
+file.reference.RSCalendar.jar-1=C:\\Users\\Usuario\\Desktop\\RSCalendar.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.RSCalendar.jar}
+    ${file.reference.RSCalendar.jar}:\
+    ${file.reference.RSCalendar.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
