--- a/Obligatorio2IngSoftware/nbproject/private/private.properties
+++ b/Obligatorio2IngSoftware/nbproject/private/private.properties
@@ -1,2 +1,3 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\Usuario\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+file.reference.RSCalendar.jar-1=/Users/tomasmartinez/Desktop/RSCalendar.jar
+user.properties.file=/Users/tomasmartinez/Library/Application Support/NetBeans/8.2/build.properties
