--- a/Obligatorio2IngSoftware2/nbproject/private/private.properties
+++ b/Obligatorio2IngSoftware2/nbproject/private/private.properties
@@ -1,3 +1,4 @@
 compile.on.save=true
 file.reference.RSCalendar.jar-1=/Users/tomasmartinez/Desktop/RSCalendar.jar
-user.properties.file=C:\\Users\\Usuario\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+file.reference.RSCalendar.jar-2=/Users/tomasmartinez/Desktop/RSCalendar.jar
+user.properties.file=/Users/tomasmartinez/Library/Application Support/NetBeans/8.2/build.properties
