--- a/Obligatorio2IngSoftware2/nbproject/project.properties
+++ b/Obligatorio2IngSoftware2/nbproject/project.properties
@@ -27,6 +27,9 @@ dist.dir=dist
 dist.jar=${dist.dir}/Obligatorio2IngSoftware.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.jxmaps-1.3.2.jar=C:\\Users\\Usuario\\Desktop\\jxMapss\\lib\\jxmaps-1.3.2.jar
+file.reference.jxmaps-win-1.3.2.jar=C:\\Users\\Usuario\\Desktop\\jxMapss\\lib\\jxmaps-win-1.3.2.jar
+file.reference.jxmapsdemo.jar=C:\\Users\\Usuario\\Desktop\\jxMapss\\demo\\jxmapsdemo.jar
 file.reference.RSCalendar.jar=/Users/tomasmartinez/Desktop/RSCalendar.jar
 file.reference.RSCalendar.jar-1=C:\\Users\\Usuario\\Desktop\\RSCalendar.jar
 file.reference.RSCalendar.jar-2=C:\\Users\\Usuario\\Desktop\\RSCalendar.jar
@@ -37,7 +40,10 @@ javac.classpath=\
     ${file.reference.RSCalendar.jar}:\
     ${file.reference.RSCalendar.jar-1}:\
     ${file.reference.RSCalendar.jar-2}:\
-    ${file.reference.RSCalendar.jar-3}
+    ${file.reference.RSCalendar.jar-3}:\
+    ${file.reference.jxmapsdemo.jar}:\
+    ${file.reference.jxmaps-1.3.2.jar}:\
+    ${file.reference.jxmaps-win-1.3.2.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
